# spomin

./: .env.example  .gitignore  Dockerfile  MEMORY_PLAN.md  README.md  docker-compose.yml  pyproject.toml  pyrightconfig.json
src/spomin/: config.py  graph.py  memory.py  server.py
tests/: test_memory.py  test_server.py
