[project]
name = "spomin"
version = "0.1.0"
description = "Self-hosted graph memory MCP server for AI agents"
requires-python = ">=3.11"
dependencies = [
    "mcp[cli]>=1.0",
    "graphiti-core>=0.3",
    "openai>=1.0",
    "pydantic-settings>=2.0",
]

[project.scripts]
spomin = "spomin.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"